# cape

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
cape/: CMakeLists.txt
cape/include/cape/: Exports.h  algorithm.h  defines.h  initializer_list.h  type_traits.h  types.h  utility.h
cape/src/cape/: test.cpp
tests/: CMakeLIsts.txt  CMakeLists.txt
tests/src/: test_algorithm_max_min.cpp  test_forward.cpp  test_initializer_list.cpp  test_swap.cpp  test_types.cpp  test_utility_move.cpp
utests/: CMakeLists.txt
utests/src/: main.cpp
